modified:   notebook.ipynb

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1939,6 +1939,136 @@
    "source": [
     "df_sample_test.to_csv('sample_test.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting pipreqs\n",
+      "  Downloading pipreqs-0.4.13-py2.py3-none-any.whl.metadata (7.4 kB)\n",
+      "Collecting docopt (from pipreqs)\n",
+      "  Downloading docopt-0.6.2.tar.gz (25 kB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Collecting yarg (from pipreqs)\n",
+      "  Downloading yarg-0.1.10-py2.py3-none-any.whl.metadata (4.5 kB)\n",
+      "Collecting requests (from yarg->pipreqs)\n",
+      "  Downloading requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Collecting charset-normalizer<4,>=2 (from requests->yarg->pipreqs)\n",
+      "  Downloading charset_normalizer-3.4.1-cp313-cp313-win_amd64.whl.metadata (36 kB)\n",
+      "Collecting idna<4,>=2.5 (from requests->yarg->pipreqs)\n",
+      "  Downloading idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting urllib3<3,>=1.21.1 (from requests->yarg->pipreqs)\n",
+      "  Downloading urllib3-2.3.0-py3-none-any.whl.metadata (6.5 kB)\n",
+      "Collecting certifi>=2017.4.17 (from requests->yarg->pipreqs)\n",
+      "  Downloading certifi-2025.1.31-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Downloading pipreqs-0.4.13-py2.py3-none-any.whl (33 kB)\n",
+      "Downloading yarg-0.1.10-py2.py3-none-any.whl (13 kB)\n",
+      "Downloading requests-2.32.3-py3-none-any.whl (64 kB)\n",
+      "Downloading certifi-2025.1.31-py3-none-any.whl (166 kB)\n",
+      "Downloading charset_normalizer-3.4.1-cp313-cp313-win_amd64.whl (102 kB)\n",
+      "Downloading idna-3.10-py3-none-any.whl (70 kB)\n",
+      "Downloading urllib3-2.3.0-py3-none-any.whl (128 kB)\n",
+      "Building wheels for collected packages: docopt\n",
+      "  Building wheel for docopt (pyproject.toml): started\n",
+      "  Building wheel for docopt (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for docopt: filename=docopt-0.6.2-py2.py3-none-any.whl size=13822 sha256=c26a229d86ab7c6feb0a4e44d38bd5fcab5f60496baeb7572af9044b54fc5d38\n",
+      "  Stored in directory: c:\\users\\rishtarish\\appdata\\local\\pip\\cache\\wheels\\0b\\1d\\03\\175286677fb5a1341cc3e4755bf8ec0ed08f3329afd67446b0\n",
+      "Successfully built docopt\n",
+      "Installing collected packages: docopt, urllib3, idna, charset-normalizer, certifi, requests, yarg, pipreqs\n",
+      "Successfully installed certifi-2025.1.31 charset-normalizer-3.4.1 docopt-0.6.2 idna-3.10 pipreqs-0.4.13 requests-2.32.3 urllib3-2.3.0 yarg-0.1.10\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pipreqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asttokens==3.0.0Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "certifi==2025.1.31\n",
+      "charset-normalizer==3.4.1\n",
+      "colorama==0.4.6\n",
+      "comm==0.2.2\n",
+      "contourpy==1.3.1\n",
+      "cycler==0.12.1\n",
+      "debugpy==1.8.12\n",
+      "decorator==5.1.1\n",
+      "docopt==0.6.2\n",
+      "executing==2.2.0\n",
+      "fonttools==4.56.0\n",
+      "greenlet==3.1.1\n",
+      "idna==3.10\n",
+      "imbalanced-learn==0.13.0\n",
+      "ipykernel==6.29.5\n",
+      "ipython==8.32.0\n",
+      "jedi==0.19.2\n",
+      "joblib==1.4.2\n",
+      "jupyter_client==8.6.3\n",
+      "jupyter_core==5.7.2\n",
+      "kiwisolver==1.4.8\n",
+      "matplotlib==3.10.0\n",
+      "matplotlib-inline==0.1.7\n",
+      "nest-asyncio==1.6.0\n",
+      "numpy==2.2.3\n",
+      "packaging==24.2\n",
+      "pandas==2.2.3\n",
+      "parso==0.8.4\n",
+      "pillow==11.1.0\n",
+      "pipreqs==0.4.13\n",
+      "platformdirs==4.3.6\n",
+      "prompt_toolkit==3.0.50\n",
+      "psutil==7.0.0\n",
+      "pure_eval==0.2.3\n",
+      "Pygments==2.19.1\n",
+      "pyparsing==3.2.1\n",
+      "python-dateutil==2.9.0.post0\n",
+      "pytz==2025.1\n",
+      "pywin32==308\n",
+      "pyzmq==26.2.1\n",
+      "requests==2.32.3\n",
+      "scikit-learn==1.6.1\n",
+      "scipy==1.15.2\n",
+      "seaborn==0.13.2\n",
+      "six==1.17.0\n",
+      "sklearn-compat==0.1.3\n",
+      "SQLAlchemy==2.0.38\n",
+      "stack-data==0.6.3\n",
+      "threadpoolctl==3.5.0\n",
+      "tornado==6.4.2\n",
+      "traitlets==5.14.3\n",
+      "typing_extensions==4.12.2\n",
+      "tzdata==2025.1\n",
+      "urllib3==2.3.0\n",
+      "wcwidth==0.2.13\n",
+      "xgboost==2.1.4\n",
+      "yarg==0.1.10\n"
+     ]
+    }
+   ],
+   "source": [
+    " pip freeze requirements.txt"
+   ]
   }
  ],
  "metadata": {
